--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>my-super-website</title>
+</head>
+
+<body>
+
   <head>
-    <meta charset="UTF-8">
-    <title>title</title>
+    <h1>Voici mon titre</h1>
+    <p>Voici mon squelettedqzdzqdzqdzq de paragraphe.</p>
+
   </head>
-  <body>
-  
-  </body>
+
+
+</body>
+
 </html>
